Fix weird interline spacing messed up by fonts

--- a/static/base.css
+++ b/static/base.css
@@ -455,7 +455,7 @@ dl.list > dd {
 
 .note-ref {
 	font-size: 80%;
-	vertical-align: super;
+	vertical-align: top;
 }
 
 
